[gd_scene load_steps=8 format=3 uid="uid://cg550pilehv06"]

[ext_resource type="Texture2D" uid="uid://g1mac86yxgxl" path="res://assets/GothaGV/GothaGV-1(hd).png" id="1_2uogn"]
[ext_resource type="Script" uid="uid://8d0rhu7vcb6c" path="res://Game/main_menu/main_menu.gd" id="1_444o2"]
[ext_resource type="Texture2D" uid="uid://46vxupxihnlt" path="res://assets/Airco D.H.2/dh2.png" id="1_y67r4"]
[ext_resource type="Texture2D" uid="uid://pugcwnswidcp" path="res://assets/FokkerDrI/fokker_dr1_1.png" id="2_qefsa"]
[ext_resource type="Texture2D" uid="uid://ban2t2vstkan2" path="res://assets/GothaGV/GothaGV-camo.png" id="3_2uogn"]
[ext_resource type="Texture2D" uid="uid://bvgn6uky7ug42" path="res://assets/Breguet XIV/Breguet_xiv.png" id="4_444o2"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ceu5l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_444o2")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1494.0
offset_bottom = 848.0
texture = ExtResource("1_2uogn")
stretch_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
offset_left = 472.0
offset_top = 598.0
offset_right = 1028.0
offset_bottom = 603.0

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
offset_left = 472.0
offset_top = 584.0
offset_right = 1028.0
offset_bottom = 589.0

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
offset_left = 472.0
offset_top = 589.0
offset_right = 1028.0
offset_bottom = 594.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 98.0
offset_right = 1028.0
offset_bottom = 661.0
alignment = 1

[node name="level1_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_ceu5l")
text = "level 1: Airco DH.2"
icon = ExtResource("1_y67r4")

[node name="level2_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_ceu5l")
text = "level 2: Fokker Dr.I Dreidecker"
icon = ExtResource("2_qefsa")

[node name="level3_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_ceu5l")
text = "Random Airplane"
icon = ExtResource("3_2uogn")

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_ceu5l")
text = "Exit"
icon = ExtResource("4_444o2")
